--- a/code/MauiApp1/MainPage.xaml
+++ b/code/MauiApp1/MainPage.xaml
@@ -4,35 +4,92 @@
              x:Class="MauiApp1.MainPage">
 
     <ScrollView>
-        <HorizontalStackLayout
+        <VerticalStackLayout>
+            <HorizontalStackLayout
         Padding="30,0"
         Margin ="0,60,0,0"
         Spacing="25"
         HorizontalOptions="Center"
         VerticalOptions="Start">
 
-            <Button
+                <Button
             x:Name="CounterBtn"
             Text="Dâte d'ajout" 
             SemanticProperties.Hint="Recherche selon la dâte d'ajout"
             HorizontalOptions="Start"
             Background="#194FC2"
             FontFamily="Jersey20"
-            CornerRadius="6"
-            FontSize="30"/>
+            WidthRequest="120"
+            HeightRequest="50"
+            CornerRadius="3"
+            FontSize="20"/>
 
-            <Frame BorderColor="#194FC2" Padding="2" HasShadow="False" CornerRadius="6" BackgroundColor="#194FC2">
-                <Frame BorderColor="#194FC2" Padding="0" HasShadow="False" CornerRadius="6" >
-                <Entry 
+                <Frame BorderColor="#194FC2" Padding="3" HasShadow="False" CornerRadius="3" BackgroundColor="#194FC2" HeightRequest="50">
+                    <Frame BorderColor="#194FC2" Padding="0" HasShadow="False" CornerRadius="1" >
+                        <Entry 
+                Visual="Default"
                 FontFamily="Jersey20"
-                FontSize="30"
-                Placeholder="Recherchez..." <!-- AMELIORE LE ENTRY -->
+                FontSize="20"
+                Placeholder="Recherchez..."
                 TextColor="Black" 
                 HorizontalOptions="Center"
+                WidthRequest="200"
+                HeightRequest="50"   
+                
                     />
-            </Frame>
-            </Frame>
-        </HorizontalStackLayout>
-    </ScrollView>
+                    </Frame>
+                </Frame>
+            </HorizontalStackLayout>
 
+
+
+
+            <StackLayout Orientation="Vertical" Spacing="20" Margin="30" VerticalOptions="Center">
+                <!-- Première ligne -->
+                <StackLayout Orientation="Horizontal" Spacing="30">
+                    <StackLayout Orientation="Vertical" HorizontalOptions="Center" Spacing="-25">
+                        <Image Source="wizardbook.png" WidthRequest="160" HeightRequest="320" />
+                        <Label Text="Ulgrif The Great, Celtania (c)1988" FontFamily="Jersey20" FontSize="13" HorizontalTextAlignment="Center"/>
+                        <Label Text="How to be a cool ahh Wizard" FontFamily="Jersey20" FontSize="13" HorizontalTextAlignment="Center"/>
+                    </StackLayout>
+                    <StackLayout Orientation="Vertical" HorizontalOptions="Center" Spacing="-25">
+                        <Image Source="wizardbook.png" WidthRequest="160" HeightRequest="320" />
+                        <Label Text="Ulgrif The Great, Celtania (c)1988" FontFamily="Jersey20" FontSize="13" HorizontalTextAlignment="Center"/>
+                        <Label Text="How to be a cool ahh Wizard" FontFamily="Jersey20" FontSize="13" HorizontalTextAlignment="Center"/>
+                    </StackLayout>
+                </StackLayout>
+
+                <!-- Deuxième ligne -->
+                <StackLayout Orientation="Horizontal" Spacing="30">
+                    <StackLayout Orientation="Vertical" HorizontalOptions="Center" Spacing="-25">
+                        <Image Source="wizardbook.png" WidthRequest="160" HeightRequest="320" />
+                        <Label Text="Ulgrif The Great, Celtania (c)1988" FontFamily="Jersey20" FontSize="13" HorizontalTextAlignment="Center"/>
+                        <Label Text="How to be a cool ahh Wizard" FontFamily="Jersey20" FontSize="13" HorizontalTextAlignment="Center"/>
+                    </StackLayout>
+                    <StackLayout Orientation="Vertical" HorizontalOptions="Center" Spacing="-25">
+                        <Image Source="wizardbook.png" WidthRequest="160" HeightRequest="320" />
+                        <Label Text="Ulgrif The Great, Celtania (c)1988" FontFamily="Jersey20" FontSize="13" HorizontalTextAlignment="Center"/>
+                        <Label Text="How to be a cool ahh Wizard" FontFamily="Jersey20" FontSize="13" HorizontalTextAlignment="Center"/>
+                    </StackLayout>
+                </StackLayout>
+
+                <!-- Troisième ligne -->
+                <StackLayout Orientation="Horizontal" Spacing="30">
+                    <StackLayout Orientation="Vertical" HorizontalOptions="Center" Spacing="-25">
+                        <Image Source="wizardbook.png" WidthRequest="160" HeightRequest="320" />
+                        <Label Text="Ulgrif The Great, Celtania (c)1988" FontFamily="Jersey20" FontSize="13" HorizontalTextAlignment="Center"/>
+                        <Label Text="How to be a cool ahh Wizard" FontFamily="Jersey20" FontSize="13" HorizontalTextAlignment="Center"/>
+                    </StackLayout>
+                    <StackLayout Orientation="Vertical" HorizontalOptions="Center" Spacing="-25">
+                        <Image Source="wizardbook.png" WidthRequest="160" HeightRequest="320" />
+                        <Label Text="Ulgrif The Great, Celtania (c)1988" FontFamily="Jersey20" FontSize="13" HorizontalTextAlignment="Center"/>
+                        <Label Text="How to be a cool ahh Wizard" FontFamily="Jersey20" FontSize="13" HorizontalTextAlignment="Center"/>
+                    </StackLayout>
+                </StackLayout>
+            </StackLayout>
+
+
+
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
