--- a/code/MauiApp1/MainPage.xaml
+++ b/code/MauiApp1/MainPage.xaml
@@ -55,9 +55,9 @@
                             <TapGestureRecognizer Tapped="OnWizardStackTapped" />
                         </StackLayout.GestureRecognizers>
 
-                        <Image Source="wizardbook.png" WidthRequest="160" HeightRequest="320" />
+                        <Image Source="{Binding ImageUrl}" WidthRequest="160" HeightRequest="320" />
                         <Label Text="Ulgrif The Great, Celtania (c)1988" FontFamily="Jersey20" FontSize="13" HorizontalTextAlignment="Center" TextColor="Black"/>
-                        <Label Text="How to be a cool ahh Wizard" FontFamily="Jersey20" FontSize="13" HorizontalTextAlignment="Center" TextColor="Black"/>
+                        <Label Text="{Binding Titre}" FontFamily="Jersey20" FontSize="13" HorizontalTextAlignment="Center" TextColor="Black"/>
                     </StackLayout>
 
                     <StackLayout Orientation="Vertical" HorizontalOptions="Center" Spacing="-25">
