--- a/code/MauiApp1/MainPage.xaml
+++ b/code/MauiApp1/MainPage.xaml
@@ -1,11 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiApp1.MainPage">
+             x:Class="MauiApp1.MainPage"
+             xmlns:viewmodels="clr-namespace:MauiApp1.ViewModels">
 
     <Shell.BackButtonBehavior>
         <BackButtonBehavior IsVisible="False" IsEnabled="False" />
     </Shell.BackButtonBehavior>
+
+
+    <ContentPage.BindingContext>
+        <viewmodels:MainViewModel />
+    </ContentPage.BindingContext>
 
     <ScrollView>
         <VerticalStackLayout BackgroundColor="White">
@@ -48,6 +54,39 @@
                 </Frame>
             </HorizontalStackLayout>
             <StackLayout Orientation="Vertical" Spacing="20" Margin="30" VerticalOptions="Center">
+
+
+
+
+
+                <CollectionView ItemsSource="{Binding Livres}"
+                SelectionMode="Single"
+                Margin="0,10"
+                ItemsLayout="VerticalGrid, 2"
+                SelectionChangedCommand="{Binding SelectLivreCommand}"
+                SelectionChangedCommandParameter="{Binding SelectedItem, Source={RelativeSource Self}}">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <VerticalStackLayout Padding="5" HorizontalOptions="Center">
+                                <Image Source="{Binding ImageUrl}"
+                       HeightRequest="200"
+                       WidthRequest="130"
+                       Aspect="AspectFill" />
+                                <Label Text="{Binding Titre}"
+                       TextColor="White"
+                       FontSize="14"
+                       HorizontalTextAlignment="Center"
+                       LineBreakMode="TailTruncation"
+                       MaxLines="2" />
+                            </VerticalStackLayout>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+
+
+
+
+
                 <!-- Première ligne -->
                 <StackLayout Orientation="Horizontal" Spacing="30">
                     <StackLayout Orientation="Vertical" HorizontalOptions="Center" Spacing="-25">
